--- a/mydjango/HelloWorld/templates/add_emp.html
+++ b/mydjango/HelloWorld/templates/add_emp.html
@@ -23,7 +23,7 @@
 <!--    <input type="submit">-->
 <!--</form>-->
  
-{#3、手动获取form对象的字段}
+<!--{#3、手动获取form对象的字段}-->
 <form action="" method="post" novalidate>
     {% csrf_token %}
     <div>
